Added font-awesome icons, tweaked gulpfile and app.scss/variables.scss to accomodate.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,5 @@
 @import "../bower/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../bower/font-awesome/scss/font-awesome";
 
 @import "common/_variables";
 @import "common/_global";
