--- a/resources/assets/sass/common/_variables.scss
+++ b/resources/assets/sass/common/_variables.scss
@@ -1,1 +1,10 @@
-$fa-font-path: "../fonts";
+// Bootstrap options
+//
+$enable-flex: true;
+$enable-rounded: false;
+$spacer: 2rem;
+
+// Components
+//
+// Define common padding and border radius sizes and more.
+$border-radius:          0 !default;
