--- a/resources/assets/sass/common/_global.scss
+++ b/resources/assets/sass/common/_global.scss
@@ -2,3 +2,16 @@ body {
   /* Height of the navbar */
   padding-top: 70px;
 }
+
+.table {
+  .row-menu {
+    padding: 0.5rem;
+    width: 54px;
+  }
+  &.table-sm {
+    .row-menu {
+      padding: 0 ($table-sm-cell-padding / 2);
+      width: 44px;
+    }
+  }
+}
