--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,5 +4,7 @@
 @import "../bower/font-awesome/scss/font-awesome";
 
 @import "common/global";
+@import "components/forms";
 @import "layouts/header";
 @import "layouts/footer";
+@import "layouts/pages";
