Update bower. Add d3

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 
 @import "common/global";
 @import "components/forms";
+@import "components/charts";
 @import "layouts/header";
 @import "layouts/footer";
 @import "layouts/pages";
