--- a/resources/assets/sass/components/_charts.scss
+++ b/resources/assets/sass/components/_charts.scss
@@ -1,14 +1,4 @@
-.charts {
-  .bar {
-    font-size: 10px;
-    background-color: $brand-primary;
-    padding: $btn-padding-y $btn-padding-x;
-    margin: 1px;
-    color: #ffffff;
-  }
-}
-
-.chart {
+.data-chart {
   .bar {
     fill: $brand-primary;
   }
@@ -34,4 +24,8 @@
   .x.axis path {
     display: none;
   }
+}
+
+.data-list {
+  
 }
