Fill in missing pieces. first compile

--- a/public/assets/css/vendors.css
+++ b/public/assets/css/vendors.css
@@ -217,3 +217,5 @@ trix-editor .attachment .caption.caption-editing textarea {
       content: ' · '; }
 
 /*# sourceMappingURL=trix.css.map */
+
+/*# sourceMappingURL=vendors.css.map */
