match to updated laravel

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,7 +1,7 @@
 @import "common/variables";
 
-@import "../bower/bootstrap/scss/bootstrap-flex";
-@import "../bower/font-awesome/scss/font-awesome";
+@import "node_modules/bootstrap/scss/bootstrap-flex";
+@import "node_modules/font-awesome/scss/font-awesome";
 
 @import "common/global";
 @import "components/forms";
