--- a/resources/assets/sass/common/_global.scss
+++ b/resources/assets/sass/common/_global.scss
@@ -9,10 +9,7 @@ body {
   flex-direction: column;
 }
 
-.main-content {
-  flex: 1 0 auto;
-  width: 100%;
-}
+.main-content {}
 
 .table {
   .row-menu {
