--- a/resources/assets/sass/common/_global.scss
+++ b/resources/assets/sass/common/_global.scss
@@ -18,7 +18,7 @@ body {
   }
   &.table-sm {
     .row-menu {
-      padding: 0 ($table-sm-cell-padding / 2);
+      padding: 0 ($spacer / 2);
       width: 44px;
     }
   }
