--- a/resources/assets/sass/common/_variables.scss
+++ b/resources/assets/sass/common/_variables.scss
@@ -1,10 +1,8 @@
 // Bootstrap options
 //
-$enable-flex: true;
 $enable-rounded: false;
-$spacer: 1rem;
 
 // Components
 //
 // Define common padding and border radius sizes and more.
-$border-radius:          0 !default;
+// $border-radius:          0 !default;
