Fix Trix content editor not showing

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../node_modules/font-awesome/scss/font-awesome";
+@import "../../../node_modules/trix/dist/trix.css";
 
 @import "common/global";
 @import "components/forms";
