--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,8 +1,6 @@
 @import "common/variables";
 
-@import "../../../node_modules/bootstrap/scss/bootstrap";
-@import "../../../node_modules/font-awesome/scss/font-awesome";
-@import "../../../node_modules/trix/dist/trix.css";
+@import "~bootstrap/scss/bootstrap";
 
 @import "common/global";
 @import "components/forms";
